feat(Engine): 新增资产管理和缓冲区功能
- 添加了资产管理系统，包括资产类型枚举和抽象资产类
- 实现了缓冲区描述和缓冲区类，支持在GPU上创建和管理缓冲区
- 在Vulkan后端实现了缓冲区相关的功能，包括内存分配和绑定
- 更新了相关头文件和CMakeLists文件，以支持新功能

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -24,6 +24,7 @@ kita_add_subdirectory(Input)
 kita_add_subdirectory(Render)
 kita_add_subdirectory(Project)
 kita_add_subdirectory(Editor)
+kita_add_subdirectory(Assets)
 
 include_directories(Generated)
 
