--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,6 @@ if (MSVC)
 endif ()
 
 add_executable(Kita Engine/main.cpp)
-target_link_libraries(Kita PRIVATE KitaCore KitaObject KitaMath KitaRHI KitaWorld)
+target_link_libraries(Kita PRIVATE KitaCore KitaObject KitaMath KitaRHI KitaWorld KitaAssets)
 
 
