refactor(Engine): 优化配置管理器和相关组件
-重构 ConfigManager 中的 FileArchives 使用 UniquePtr
- 添加 IconFontPath 配置项
-调整 ITick 和 TickManager 的调试名称相关代码
- 修改 Map 和 Set 容器的模板参数
- 更新 TOMLOutputArchive 构造函数和成员变量
- 添加 assimp 依赖
- Release构建编译通过并顺利运行

--- a/Content/Config/Engine.cfg
+++ b/Content/Config/Engine.cfg
@@ -2,6 +2,7 @@
 CharsetPath = 'Assets/Font/Charset.txt'
 FontPath = 'Assets/Font/Default.ttf'
 FontSize = 30.0
+IconFontPath = 'Assets/Font/IconFont.ttf'
 
 [ImGui.Theme]
 ChildBorderSize = 1.0
