feat(assets): 实现资产异步加载功能
- 新增 AssetLoadTaskHandle 类用于资产加载任务
- 在 AssetsManager 中实现 LoadAsyncM 方法支持异步加载- 添加 MakeObjectLoading 和 MakeObjectLoaded 方法管理加载状态
- 在 ObjectTable 中实现 ModifyObjectHandleM 方法修改对象句柄
-优化 MeshMeta 结构，添加数据库主键和路径等属性
- 重构 Asset.generated.* 文件，移除冗余代码

--- a/Engine/Assets/CMakeLists.txt
+++ b/Engine/Assets/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library(KitaAssets
         AssetsManager.h
 )
 
-target_link_libraries(KitaAssets PRIVATE KitaCore KitaObject KitaRHI)
+target_link_libraries(KitaAssets PRIVATE KitaCore KitaObject KitaRHI KitaProject)
 
 target_include_directories(KitaAssets PUBLIC ${Assets_GENERATED_DIR})
 target_include_directories(KitaAssets PUBLIC ../)
