feat(assets): 添加 Shader资产类型并优化 Mesh 加载日志
- 新增 Shader资产类型，包括 ShaderMeta、ShaderBinaryData 和 Shader 类- 在 Mesh 加载时增加日志输出，记录加载成功或失败
- 重构 AssetMeta，为多态性提供更好的支持
- 优化 Object 类中的 Handle 相关方法，提高代码可读性

--- a/Engine/Assets/CMakeLists.txt
+++ b/Engine/Assets/CMakeLists.txt
@@ -9,6 +9,8 @@ add_library(KitaAssets
         Mesh.h
         AssetsManager.cpp
         AssetsManager.h
+        Shader.cpp
+        Shader.h
 )
 
 target_link_libraries(KitaAssets PRIVATE KitaCore KitaObject KitaRHI KitaProject)
@@ -18,4 +20,22 @@ target_include_directories(KitaAssets PUBLIC ../)
 
 find_package(SqliteOrm CONFIG REQUIRED)
 target_link_libraries(KitaAssets PRIVATE sqlite_orm::sqlite_orm)
+
+# 查找 shader-slang 的头文件和链接库
+find_path(SLANG_INCLUDE_DIR slang.h) # 查找 shader-slang 的头文件
+find_library(SLANG_LIBRARY NAMES slang) # 查找 shader-slang 的库文件
+
+# 如果找到 shader-slang，设置头文件和链接库
+if (SLANG_INCLUDE_DIR AND SLANG_LIBRARY)
+    message(STATUS "Found shader-slang")
+    add_library(slang STATIC IMPORTED)
+    set_target_properties(slang PROPERTIES
+            IMPORTED_LOCATION ${SLANG_LIBRARY}
+            INTERFACE_INCLUDE_DIRECTORIES ${SLANG_INCLUDE_DIR})
+else ()
+    message(FATAL_ERROR "shader-slang not found!")
+endif ()
+
+# 链接 shader-slang 库
+target_link_libraries(KitaAssets PRIVATE slang)
 
