feat(assets): 实现 Shader缓存和编译功能
- 新增 AssetsConfig 类，用于配置 Shader 搜索路径
- 实现 Shader 缓存读取和写入功能
- 添加 Shader 编译逻辑，支持 slang shader 编译为 spirv 二进制数据
- 优化 File 类，增加获取文件最后修改时间的方法- 新增 InputFileStream 和 OutputFileStream 类，用于文件读写操作- 改进 String 类，添加字符串替换方法
- 更新 StringUtils 类，增加字符串转换为数字的功能

--- a/Engine/Assets/CMakeLists.txt
+++ b/Engine/Assets/CMakeLists.txt
@@ -11,6 +11,8 @@ add_library(KitaAssets
         AssetsManager.h
         Shader.cpp
         Shader.h
+        AssetsConfig.cpp
+        AssetsConfig.h
 )
 
 target_link_libraries(KitaAssets PRIVATE KitaCore KitaObject KitaRHI KitaProject)
