feat(assets): 实现资产导入和加载功能
- 新增资产类型枚举和资产索引结构
- 实现资产导入和加载的通用逻辑
- 添加对Mesh和Shader资产的支持
- 优化资产加载任务和完成任务的处理流程
- 增加资产类型的自动识别和错误处理

--- a/Engine/Assets/CMakeLists.txt
+++ b/Engine/Assets/CMakeLists.txt
@@ -41,3 +41,6 @@ endif ()
 # 链接 shader-slang 库
 target_link_libraries(KitaAssets PRIVATE slang)
 
+find_package(assimp CONFIG REQUIRED)
+target_link_libraries(KitaAssets PRIVATE assimp::assimp)
+
