feat(Engine): 添加 Shader 参数反射系统
- 新增 Shader 参数反射功能，支持提取和处理 Shader 中的参数信息
- 添加 Dynamic 和 Label 属性，用于标记和管理 Shader 参数
- 更新 Shader 二进制数据格式，增加参数信息的存储
- 引入 nlohmann_json 库，用于参数信息的序列化和反序列化

--- a/Engine/Assets/CMakeLists.txt
+++ b/Engine/Assets/CMakeLists.txt
@@ -44,3 +44,5 @@ target_link_libraries(KitaAssets PRIVATE slang)
 find_package(assimp CONFIG REQUIRED)
 target_link_libraries(KitaAssets PRIVATE assimp::assimp)
 
+find_package(nlohmann_json CONFIG REQUIRED)
+target_link_libraries(KitaAssets PRIVATE nlohmann_json::nlohmann_json)
