feat(core): 添加枚举类位运算支持并优化序列化功能- 定义宏ENABLE_BITMASK_OPERATORS，使枚举类支持位运算 - 新增InlinedOutput结构体，用于标记需要内联输出的类型 - 修改OutputArchive类，支持枚举类的位运算和内联输出 - 更新TOMLOutputArchive和YAMLOutputArchive，支持内联对象输出 - 移除project.yaml文件 - 更新Engine.cfg文件，调整ImGui配置和RHI设置

--- a/Content/project.yaml
+++ b/Content/project.yaml
@@ -1,4 +1,4 @@
 Project:
   mProjectPath: C:\Users\kita\Documents\Projects\Kita\Content
-  mProjectName: KitaEngine
-  mPersistentId: 3
+  mProjectName: UnnamedProject
+  mPersistentId: 0
