--- a/Content/Config/Engine.cfg
+++ b/Content/Config/Engine.cfg
@@ -4,389 +4,93 @@ ShaderSearchPaths = [ 'Assets/Shader' ]
 [ImGui]
 CharsetPath = 'Assets/Font/Charset.txt'
 FontPath = 'Assets/Font/Default.ttf'
-FontSize = 30.0
+FontSize = 32.0
 IconFontPath = 'Assets/Font/IconFont.ttf'
 
 [ImGui.Theme]
+Border = { W = 0.28999999165534973, X = 0.1899999976158142, Y = 0.1899999976158142, Z = 0.1899999976158142 }
+BorderShadow = { W = 0.23999999463558197, X = 0.0, Y = 0.0, Z = 0.0 }
+Button = { W = 0.5400000214576721, X = 0.05000000074505806, Y = 0.05000000074505806, Z = 0.05000000074505806 }
+ButtonActive = { W = 1.0, X = 0.20000000298023224, Y = 0.2199999988079071, Z = 0.23000000417232513 }
+ButtonHovered = { W = 0.5400000214576721, X = 0.1899999976158142, Y = 0.1899999976158142, Z = 0.1899999976158142 }
+CellPadding = { X = 6.0, Y = 6.0 }
+CheckMark = { W = 1.0, X = 0.33000001311302185, Y = 0.6700000166893005, Z = 0.8600000143051147 }
+ChildBg = { W = 0.0, X = 0.0, Y = 0.0, Z = 0.0 }
 ChildBorderSize = 1.0
 ChildRounding = 4.0
+DockingEmptyBg = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
+DockingPreview = { W = 1.0, X = 0.33000001311302185, Y = 0.6700000166893005, Z = 0.8600000143051147 }
+DragDropTarget = { W = 1.0, X = 0.33000001311302185, Y = 0.6700000166893005, Z = 0.8600000143051147 }
+FrameBg = { W = 0.5400000214576721, X = 0.05000000074505806, Y = 0.05000000074505806, Z = 0.05000000074505806 }
+FrameBgActive = { W = 1.0, X = 0.20000000298023224, Y = 0.2199999988079071, Z = 0.23000000417232513 }
+FrameBgHovered = { W = 0.5400000214576721, X = 0.1899999976158142, Y = 0.1899999976158142, Z = 0.1899999976158142 }
 FrameBorderSize = 1.0
+FramePadding = { X = 5.0, Y = 2.0 }
 FrameRounding = 3.0
 GrabMinSize = 10.0
 GrabRounding = 3.0
+Header = { W = 0.5199999809265137, X = 0.0, Y = 0.0, Z = 0.0 }
+HeaderActive = { W = 0.33000001311302185, X = 0.20000000298023224, Y = 0.2199999988079071, Z = 0.23000000417232513 }
+HeaderHovered = { W = 0.36000001430511475, X = 0.0, Y = 0.0, Z = 0.0 }
 IndentSpacing = 25.0
+ItemInnerSpacing = { X = 6.0, Y = 6.0 }
+ItemSpacing = { X = 6.0, Y = 6.0 }
 LogSliderDeadzone = 4.0
+MenuBarBg = { W = 1.0, X = 0.14000000059604645, Y = 0.14000000059604645, Z = 0.14000000059604645 }
+ModalWindowDimBg = { W = 0.3499999940395355, X = 1.0, Y = 0.0, Z = 0.0 }
+NavHighlight = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
+NavWindowingDimBg = { W = 0.20000000298023224, X = 1.0, Y = 0.0, Z = 0.0 }
+NavWindowingHighlight = { W = 0.699999988079071, X = 1.0, Y = 0.0, Z = 0.0 }
+PlotHistogram = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
+PlotHistogramHovered = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
+PlotLines = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
+PlotLinesHovered = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
+PopupBg = { W = 0.9200000166893005, X = 0.1899999976158142, Y = 0.1899999976158142, Z = 0.1899999976158142 }
 PopupBorderSize = 1.0
 PopupRounding = 4.0
+ResizeGrip = { W = 0.28999999165534973, X = 0.2800000011920929, Y = 0.2800000011920929, Z = 0.2800000011920929 }
+ResizeGripActive = { W = 1.0, X = 0.4000000059604645, Y = 0.4399999976158142, Z = 0.4699999988079071 }
+ResizeGripHovered = { W = 0.28999999165534973, X = 0.4399999976158142, Y = 0.4399999976158142, Z = 0.4399999976158142 }
+ScrollbarBg = { W = 0.5400000214576721, X = 0.05000000074505806, Y = 0.05000000074505806, Z = 0.05000000074505806 }
+ScrollbarGrab = { W = 0.5400000214576721, X = 0.3400000035762787, Y = 0.3400000035762787, Z = 0.3400000035762787 }
+ScrollbarGrabActive = { W = 0.5400000214576721, X = 0.5600000023841858, Y = 0.5600000023841858, Z = 0.5600000023841858 }
+ScrollbarGrabHovered = { W = 0.5400000214576721, X = 0.4000000059604645, Y = 0.4000000059604645, Z = 0.4000000059604645 }
 ScrollbarRounding = 9.0
 ScrollbarSize = 15.0
+Separator = { W = 0.28999999165534973, X = 0.2800000011920929, Y = 0.2800000011920929, Z = 0.2800000011920929 }
+SeparatorActive = { W = 1.0, X = 0.4000000059604645, Y = 0.4399999976158142, Z = 0.4699999988079071 }
+SeparatorHovered = { W = 0.28999999165534973, X = 0.4399999976158142, Y = 0.4399999976158142, Z = 0.4399999976158142 }
+SliderGrab = { W = 0.5400000214576721, X = 0.3400000035762787, Y = 0.3400000035762787, Z = 0.3400000035762787 }
+SliderGrabActive = { W = 0.5400000214576721, X = 0.5600000023841858, Y = 0.5600000023841858, Z = 0.5600000023841858 }
+Tab = { W = 0.5199999809265137, X = 0.0, Y = 0.0, Z = 0.0 }
+TabActive = { W = 0.36000001430511475, X = 0.20000000298023224, Y = 0.20000000298023224, Z = 0.20000000298023224 }
 TabBorderSize = 1.0
+TabHovered = { W = 1.0, X = 0.14000000059604645, Y = 0.14000000059604645, Z = 0.14000000059604645 }
 TabRounding = 4.0
+TabUnfocused = { W = 0.5199999809265137, X = 0.0, Y = 0.0, Z = 0.0 }
+TabUnfocusedActive = { W = 1.0, X = 0.14000000059604645, Y = 0.14000000059604645, Z = 0.14000000059604645 }
+TableBorderLight = { W = 0.28999999165534973, X = 0.2800000011920929, Y = 0.2800000011920929, Z = 0.2800000011920929 }
+TableBorderStrong = { W = 0.5199999809265137, X = 0.0, Y = 0.0, Z = 0.0 }
+TableHeaderBg = { W = 0.5199999809265137, X = 0.0, Y = 0.0, Z = 0.0 }
+TableRowBg = { W = 0.0, X = 0.0, Y = 0.0, Z = 0.0 }
+TableRowBgAlt = { W = 0.05999999865889549, X = 1.0, Y = 1.0, Z = 1.0 }
+Text = { W = 1.0, X = 1.0, Y = 1.0, Z = 1.0 }
+TextDisabled = { W = 1.0, X = 0.5, Y = 0.5, Z = 0.5 }
+TextSelectedBg = { W = 1.0, X = 0.20000000298023224, Y = 0.2199999988079071, Z = 0.23000000417232513 }
+TitleBg = { W = 1.0, X = 0.0, Y = 0.0, Z = 0.0 }
+TitleBgActive = { W = 1.0, X = 0.05999999865889549, Y = 0.05999999865889549, Z = 0.05999999865889549 }
+TitleBgCollapsed = { W = 1.0, X = 0.0, Y = 0.0, Z = 0.0 }
+TouchExtraPadding = { X = 0.0, Y = 0.0 }
+WindowBg = { W = 1.0, X = 0.10000000149011612, Y = 0.10000000149011612, Z = 0.10000000149011612 }
 WindowBorderSize = 1.0
+WindowPadding = { X = 8.0, Y = 8.0 }
 WindowRounding = 7.0
 
-[ImGui.Theme.Border]
-W = 0.28999999165534973
-X = 0.1899999976158142
-Y = 0.1899999976158142
-Z = 0.1899999976158142
-
-[ImGui.Theme.BorderShadow]
-W = 0.23999999463558197
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.Button]
-W = 0.5400000214576721
-X = 0.05000000074505806
-Y = 0.05000000074505806
-Z = 0.05000000074505806
-
-[ImGui.Theme.ButtonActive]
-W = 1.0
-X = 0.20000000298023224
-Y = 0.2199999988079071
-Z = 0.23000000417232513
-
-[ImGui.Theme.ButtonHovered]
-W = 0.5400000214576721
-X = 0.1899999976158142
-Y = 0.1899999976158142
-Z = 0.1899999976158142
-
-[ImGui.Theme.CellPadding]
-X = 6.0
-Y = 6.0
-
-[ImGui.Theme.CheckMark]
-W = 1.0
-X = 0.33000001311302185
-Y = 0.6700000166893005
-Z = 0.8600000143051147
-
-[ImGui.Theme.ChildBg]
-W = 0.0
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.DockingEmptyBg]
-W = 1.0
-X = 1.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.DockingPreview]
-W = 1.0
-X = 0.33000001311302185
-Y = 0.6700000166893005
-Z = 0.8600000143051147
-
-[ImGui.Theme.DragDropTarget]
-W = 1.0
-X = 0.33000001311302185
-Y = 0.6700000166893005
-Z = 0.8600000143051147
-
-[ImGui.Theme.FrameBg]
-W = 0.5400000214576721
-X = 0.05000000074505806
-Y = 0.05000000074505806
-Z = 0.05000000074505806
-
-[ImGui.Theme.FrameBgActive]
-W = 1.0
-X = 0.20000000298023224
-Y = 0.2199999988079071
-Z = 0.23000000417232513
-
-[ImGui.Theme.FrameBgHovered]
-W = 0.5400000214576721
-X = 0.1899999976158142
-Y = 0.1899999976158142
-Z = 0.1899999976158142
-
-[ImGui.Theme.FramePadding]
-X = 5.0
-Y = 2.0
-
-[ImGui.Theme.Header]
-W = 0.5199999809265137
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.HeaderActive]
-W = 0.33000001311302185
-X = 0.20000000298023224
-Y = 0.2199999988079071
-Z = 0.23000000417232513
-
-[ImGui.Theme.HeaderHovered]
-W = 0.36000001430511475
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.ItemInnerSpacing]
-X = 6.0
-Y = 6.0
-
-[ImGui.Theme.ItemSpacing]
-X = 6.0
-Y = 6.0
-
-[ImGui.Theme.MenuBarBg]
-W = 1.0
-X = 0.14000000059604645
-Y = 0.14000000059604645
-Z = 0.14000000059604645
-
-[ImGui.Theme.ModalWindowDimBg]
-W = 0.3499999940395355
-X = 1.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.NavHighlight]
-W = 1.0
-X = 1.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.NavWindowingDimBg]
-W = 0.20000000298023224
-X = 1.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.NavWindowingHighlight]
-W = 0.699999988079071
-X = 1.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.PlotHistogram]
-W = 1.0
-X = 1.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.PlotHistogramHovered]
-W = 1.0
-X = 1.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.PlotLines]
-W = 1.0
-X = 1.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.PlotLinesHovered]
-W = 1.0
-X = 1.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.PopupBg]
-W = 0.9200000166893005
-X = 0.1899999976158142
-Y = 0.1899999976158142
-Z = 0.1899999976158142
-
-[ImGui.Theme.ResizeGrip]
-W = 0.28999999165534973
-X = 0.2800000011920929
-Y = 0.2800000011920929
-Z = 0.2800000011920929
-
-[ImGui.Theme.ResizeGripActive]
-W = 1.0
-X = 0.4000000059604645
-Y = 0.4399999976158142
-Z = 0.4699999988079071
-
-[ImGui.Theme.ResizeGripHovered]
-W = 0.28999999165534973
-X = 0.4399999976158142
-Y = 0.4399999976158142
-Z = 0.4399999976158142
-
-[ImGui.Theme.ScrollbarBg]
-W = 0.5400000214576721
-X = 0.05000000074505806
-Y = 0.05000000074505806
-Z = 0.05000000074505806
-
-[ImGui.Theme.ScrollbarGrab]
-W = 0.5400000214576721
-X = 0.3400000035762787
-Y = 0.3400000035762787
-Z = 0.3400000035762787
-
-[ImGui.Theme.ScrollbarGrabActive]
-W = 0.5400000214576721
-X = 0.5600000023841858
-Y = 0.5600000023841858
-Z = 0.5600000023841858
-
-[ImGui.Theme.ScrollbarGrabHovered]
-W = 0.5400000214576721
-X = 0.4000000059604645
-Y = 0.4000000059604645
-Z = 0.4000000059604645
-
-[ImGui.Theme.Separator]
-W = 0.28999999165534973
-X = 0.2800000011920929
-Y = 0.2800000011920929
-Z = 0.2800000011920929
-
-[ImGui.Theme.SeparatorActive]
-W = 1.0
-X = 0.4000000059604645
-Y = 0.4399999976158142
-Z = 0.4699999988079071
-
-[ImGui.Theme.SeparatorHovered]
-W = 0.28999999165534973
-X = 0.4399999976158142
-Y = 0.4399999976158142
-Z = 0.4399999976158142
-
-[ImGui.Theme.SliderGrab]
-W = 0.5400000214576721
-X = 0.3400000035762787
-Y = 0.3400000035762787
-Z = 0.3400000035762787
-
-[ImGui.Theme.SliderGrabActive]
-W = 0.5400000214576721
-X = 0.5600000023841858
-Y = 0.5600000023841858
-Z = 0.5600000023841858
-
-[ImGui.Theme.Tab]
-W = 0.5199999809265137
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.TabActive]
-W = 0.36000001430511475
-X = 0.20000000298023224
-Y = 0.20000000298023224
-Z = 0.20000000298023224
-
-[ImGui.Theme.TabHovered]
-W = 1.0
-X = 0.14000000059604645
-Y = 0.14000000059604645
-Z = 0.14000000059604645
-
-[ImGui.Theme.TabUnfocused]
-W = 0.5199999809265137
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.TabUnfocusedActive]
-W = 1.0
-X = 0.14000000059604645
-Y = 0.14000000059604645
-Z = 0.14000000059604645
-
-[ImGui.Theme.TableBorderLight]
-W = 0.28999999165534973
-X = 0.2800000011920929
-Y = 0.2800000011920929
-Z = 0.2800000011920929
-
-[ImGui.Theme.TableBorderStrong]
-W = 0.5199999809265137
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.TableHeaderBg]
-W = 0.5199999809265137
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.TableRowBg]
-W = 0.0
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.TableRowBgAlt]
-W = 0.05999999865889549
-X = 1.0
-Y = 1.0
-Z = 1.0
-
-[ImGui.Theme.Text]
-W = 1.0
-X = 1.0
-Y = 1.0
-Z = 1.0
-
-[ImGui.Theme.TextDisabled]
-W = 1.0
-X = 0.5
-Y = 0.5
-Z = 0.5
-
-[ImGui.Theme.TextSelectedBg]
-W = 1.0
-X = 0.20000000298023224
-Y = 0.2199999988079071
-Z = 0.23000000417232513
-
-[ImGui.Theme.TitleBg]
-W = 1.0
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.TitleBgActive]
-W = 1.0
-X = 0.05999999865889549
-Y = 0.05999999865889549
-Z = 0.05999999865889549
-
-[ImGui.Theme.TitleBgCollapsed]
-W = 1.0
-X = 0.0
-Y = 0.0
-Z = 0.0
-
-[ImGui.Theme.TouchExtraPadding]
-X = 0.0
-Y = 0.0
-
-[ImGui.Theme.WindowBg]
-W = 1.0
-X = 0.10000000149011612
-Y = 0.10000000149011612
-Z = 0.10000000149011612
-
-[ImGui.Theme.WindowPadding]
-X = 8.0
-Y = 8.0
-
 [RHI]
+DefaultWindowSize = { X = 1920, Y = 1080 }
 DesiredSwapchainColorSpace = 'sRGB'
 DesiredSwapchainFormat = 'B8G8R8A8_UNorm'
 EnableVulkanValidationLayer = true
 GraphicsBackend = 'Vulkan'
 PresentMode = 'VSync'
 SurfaceWindowType = 'GLFW'
-
-[RHI.DefaultWindowSize]
-X = 1920
-Y = 1080
