feat(editor): 新增属性检查器窗口
- 添加 Inspector 窗口用于查看对象属性
- 实现基础的 Inspector 接口和 InspectorWindow 类
- 添加 ShaderInspector 用于查看着色器属性- 调整现有窗口的菜单项位置

--- a/Engine/Editor/CMakeLists.txt
+++ b/Engine/Editor/CMakeLists.txt
@@ -18,9 +18,15 @@ add_library(KitaEditor
         EditorWindowManager.h
         Windows/ImGuiDemoWindow.cpp
         Windows/ImGuiDemoWindow.h
+        Inspector/ShaderInspector.cpp
+        Inspector/ShaderInspector.h
+        Inspector/Inspector.cpp
+        Inspector/Inspector.h
+        Windows/InspectorWindow.cpp
+        Windows/InspectorWindow.h
 )
 
-target_link_libraries(KitaEditor PRIVATE KitaCore KitaObject KitaRender)
+target_link_libraries(KitaEditor PRIVATE KitaCore KitaObject KitaRender KitaAssets)
 
 find_package(glfw3 CONFIG REQUIRED)
 target_link_libraries(KitaEditor PRIVATE glfw)
