build:优化项目构建系统并添加缓存支持
- 移除生成文件的冗余路径- 添加链接库的优化方法- 实现生成文件的缓存机制
- 更新 CMakeLists.txt 文件以使用新的缓存路径- 添加对生成文件路径的全局变量设置

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_GENERATOR "Ninja")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(KITA_GLOBAL_BINARY_DIR ${CMAKE_BINARY_DIR} CACHE INTERNAL "全局二进制目录")
 set(KITA_GLOBAL_GENERATED_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Engine/Generated CACHE INTERNAL "全局生成文件目录")
+set_property(GLOBAL PROPERTY CMAKE_CXX_SCAN_FOR_MODULES OFF)
 set(CMAKE_CXX_STANDARD 26)
 if (NOT ${VARIABLE} EQUAL "0")
     message(WARNING ${VARIABLE})
@@ -23,6 +24,30 @@ if (MSVC)
 endif ()
 
 add_executable(Kita Engine/main.cpp)
-target_link_libraries(Kita PRIVATE KitaCore KitaObject KitaMath KitaRHI KitaWorld KitaAssets)
 
+# 方法1：使用函数（推荐）
+function(link_whole_archive target)
+    foreach(lib ${ARGN})
+        if(MSVC)
+            # 获取库文件的完整路径
+            target_link_options(${target} PRIVATE
+                    "/WHOLEARCHIVE:$<TARGET_FILE:${lib}>"
+            )
+        elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+            target_link_libraries(${target} PRIVATE
+                    -Wl,--whole-archive ${lib} -Wl,--no-whole-archive
+            )
+        endif()
 
+        # 确保依赖关系正确
+        target_link_libraries(${target} PRIVATE ${lib})
+    endforeach()
+endfunction()
+
+link_whole_archive(Kita KitaCore)
+link_whole_archive(Kita KitaObject)
+link_whole_archive(Kita KitaMath)
+link_whole_archive(Kita KitaRHI)
+link_whole_archive(Kita KitaWorld)
+link_whole_archive(Kita KitaAssets)
+link_whole_archive(Kita KitaEditor)
