feat(editor): 添加内容浏览器窗口- 新增 ContentBrowserWindow 类，用于显示和管理项目内容 - 实现基本的目录树视图和文件属性显示 - 添加可拖拽的分割器，用于调整窗口布局 - 优化了 EditorUI 类，增加了 BeginHorizontal、EndHorizontal 等方法，用于布局管理

--- a/Content/imgui.ini
+++ b/Content/imgui.ini
@@ -16,36 +16,155 @@ DockId=0x00000002,0
 
 [Window][日志]
 Pos=8,44
-Size=1904,1028
+Size=1565,1028
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
 Pos=8,44
-Size=996,1028
+Size=3824,2002
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000001,2
 
 [Window][Example: Assets Browser]
-Pos=60,58
-Size=800,480
+Pos=627,666
+Size=2113,1074
 Collapsed=0
 
 [Window][Dear ImGui Demo/##Basket_87771727]
 IsChild=1
 Size=830,600
 
+[Window][内容浏览器]
+Pos=8,44
+Size=1565,1028
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][Example: Documents]
+Pos=1024,423
+Size=1175,2048
+Collapsed=0
+
+[Window][Example: Console]
+Pos=664,494
+Size=1471,544
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=683,582
+Size=918,494
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=309,820
+Size=918,116
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=748,530
+Size=496,84
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=323,625
+Size=918,116
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=680,650
+Size=1068,731
+Collapsed=0
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=60,60
+Size=627,256
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=2258,44
+Size=1574,2002
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=467,384
+Collapsed=0
+
+[Window][内容浏览器/##文件夹_8043B50F]
+IsChild=1
+Size=416,976
+
+[Window][细节]
+Pos=1575,44
+Size=337,1028
+Collapsed=0
+DockId=0x00000006,0
+
 [Table][0x4D95F9BC,3]
-Column 0  Weight=0.1542
-Column 1  Weight=0.3783
-Column 2  Weight=2.4676
+Column 0  Weight=0.2614
+Column 1  Weight=0.2370
+Column 2  Weight=2.5017
 
 [Table][0xB6880529,2]
-RefScale=30
-Column 0  Sort=0v
+RefScale=32
+Column 1  Sort=0^
+
+[Table][0xEB78AB2C,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x51D6F5EA,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xE102187A,3]
+RefScale=32
+Column 0  Width=131
+Column 1  Width=131
+Column 2  Width=131
+
+[Table][0x127BEAD2,7]
+RefScale=32
+Column 0  Width=102
+Column 1  Width=233
+Column 2  Width=233
+Column 3  Width=233
+Column 4  Width=233
+Column 5  Width=233
+Column 6  Width=233
+
+[Table][0xAED4F161,3]
+RefScale=32
+Column 0  Width=499
+Column 1  Width=131 Sort=0v
+Column 2  Width=-1
+
+[Table][0x951FCC8A,6]
+RefScale=32
+Column 0  Width=59 Sort=0v
+Column 1  Width=146
+Column 2  Width=129
+Column 3  Width=142
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x6655AF53,4]
+RefScale=32
+Column 0  Width=59 Sort=0v
+Column 1  Width=146
+Column 2  Width=88
+Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace   ID=0xC0DFADC4 Window=0xD0388BC8 Pos=8,44 Size=1904,1028 Split=X Selected=0x16870F44
-  DockNode  ID=0x00000001 Parent=0xC0DFADC4 SizeRef=996,1028 CentralNode=1 Selected=0x16870F44
-  DockNode  ID=0x00000002 Parent=0xC0DFADC4 SizeRef=906,1028 Selected=0xFA76FC88
+DockSpace       ID=0xC0DFADC4 Window=0xD0388BC8 Pos=8,44 Size=1904,1028 Split=X Selected=0x16870F44
+  DockNode      ID=0x00000005 Parent=0xC0DFADC4 SizeRef=1565,1028 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=2248,1028 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=996,1028 CentralNode=1 Selected=0x5A3EEF93
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=906,1028 Selected=0xFA76FC88
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1574,1028 Selected=0x3EEA4247
+  DockNode      ID=0x00000006 Parent=0xC0DFADC4 SizeRef=337,1028 Selected=0x4BBB5F53
 
