feat(Editor): 重构编辑器 UI 系统
- 移除 HorizontalLayout 相关代码，简化 UI 布局逻辑
- 重构 Splitter 函数，实现更灵活的分割线组件
- 更新 ContentBrowserWindow，使用新的 UI 布局方式
-调整 EngineLoop 以初始化编辑器 UI 颜色- 删除不必要的配置文件内容

--- a/Content/Config/Engine.cfg
+++ b/Content/Config/Engine.cfg
@@ -5,80 +5,80 @@ FontSize = 32.0
 IconFontPath = 'Assets/Font/IconFont.ttf'
 
 [ImGui.Theme]
-Border = { W = 0.28999999165534973, X = 0.1899999976158142, Y = 0.1899999976158142, Z = 0.1899999976158142 }
-BorderShadow = { W = 0.23999999463558197, X = 0.0, Y = 0.0, Z = 0.0 }
-Button = { W = 0.5400000214576721, X = 0.05000000074505806, Y = 0.05000000074505806, Z = 0.05000000074505806 }
-ButtonActive = { W = 1.0, X = 0.20000000298023224, Y = 0.2199999988079071, Z = 0.23000000417232513 }
-ButtonHovered = { W = 0.5400000214576721, X = 0.1899999976158142, Y = 0.1899999976158142, Z = 0.1899999976158142 }
+Border = { A = 0.28999999165534973, B = 0.1899999976158142, G = 0.1899999976158142, R = 0.1899999976158142 }
+BorderShadow = { A = 0.23999999463558197, B = 0.0, G = 0.0, R = 0.0 }
+Button = { A = 0.5400000214576721, B = 0.05000000074505806, G = 0.05000000074505806, R = 0.05000000074505806 }
+ButtonActive = { A = 1.0, B = 0.23000000417232513, G = 0.2199999988079071, R = 0.20000000298023224 }
+ButtonHovered = { A = 0.5400000214576721, B = 0.1899999976158142, G = 0.1899999976158142, R = 0.1899999976158142 }
 CellPadding = { X = 6.0, Y = 6.0 }
-CheckMark = { W = 1.0, X = 0.33000001311302185, Y = 0.6700000166893005, Z = 0.8600000143051147 }
-ChildBg = { W = 0.0, X = 0.0, Y = 0.0, Z = 0.0 }
+CheckMark = { A = 1.0, B = 0.8600000143051147, G = 0.6700000166893005, R = 0.33000001311302185 }
+ChildBg = { A = 0.0, B = 0.0, G = 0.0, R = 0.0 }
 ChildBorderSize = 1.0
 ChildRounding = 4.0
-DockingEmptyBg = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
-DockingPreview = { W = 1.0, X = 0.33000001311302185, Y = 0.6700000166893005, Z = 0.8600000143051147 }
-DragDropTarget = { W = 1.0, X = 0.33000001311302185, Y = 0.6700000166893005, Z = 0.8600000143051147 }
-FrameBg = { W = 0.5400000214576721, X = 0.05000000074505806, Y = 0.05000000074505806, Z = 0.05000000074505806 }
-FrameBgActive = { W = 1.0, X = 0.20000000298023224, Y = 0.2199999988079071, Z = 0.23000000417232513 }
-FrameBgHovered = { W = 0.5400000214576721, X = 0.1899999976158142, Y = 0.1899999976158142, Z = 0.1899999976158142 }
+DockingEmptyBg = { A = 1.0, B = 0.0, G = 0.0, R = 1.0 }
+DockingPreview = { A = 1.0, B = 0.8600000143051147, G = 0.6700000166893005, R = 0.33000001311302185 }
+DragDropTarget = { A = 1.0, B = 0.8600000143051147, G = 0.6700000166893005, R = 0.33000001311302185 }
+FrameBg = { A = 0.5400000214576721, B = 0.05000000074505806, G = 0.05000000074505806, R = 0.05000000074505806 }
+FrameBgActive = { A = 1.0, B = 0.23000000417232513, G = 0.2199999988079071, R = 0.20000000298023224 }
+FrameBgHovered = { A = 0.5400000214576721, B = 0.1899999976158142, G = 0.1899999976158142, R = 0.1899999976158142 }
 FrameBorderSize = 1.0
 FramePadding = { X = 5.0, Y = 2.0 }
 FrameRounding = 3.0
 GrabMinSize = 10.0
 GrabRounding = 3.0
-Header = { W = 0.5199999809265137, X = 0.0, Y = 0.0, Z = 0.0 }
-HeaderActive = { W = 0.33000001311302185, X = 0.20000000298023224, Y = 0.2199999988079071, Z = 0.23000000417232513 }
-HeaderHovered = { W = 0.36000001430511475, X = 0.0, Y = 0.0, Z = 0.0 }
+Header = { A = 0.5199999809265137, B = 0.0, G = 0.0, R = 0.0 }
+HeaderActive = { A = 0.33000001311302185, B = 0.23000000417232513, G = 0.2199999988079071, R = 0.20000000298023224 }
+HeaderHovered = { A = 0.36000001430511475, B = 0.0, G = 0.0, R = 0.0 }
 IndentSpacing = 25.0
 ItemInnerSpacing = { X = 6.0, Y = 6.0 }
 ItemSpacing = { X = 6.0, Y = 6.0 }
 LogSliderDeadzone = 4.0
-MenuBarBg = { W = 1.0, X = 0.14000000059604645, Y = 0.14000000059604645, Z = 0.14000000059604645 }
-ModalWindowDimBg = { W = 0.3499999940395355, X = 1.0, Y = 0.0, Z = 0.0 }
-NavHighlight = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
-NavWindowingDimBg = { W = 0.20000000298023224, X = 1.0, Y = 0.0, Z = 0.0 }
-NavWindowingHighlight = { W = 0.699999988079071, X = 1.0, Y = 0.0, Z = 0.0 }
-PlotHistogram = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
-PlotHistogramHovered = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
-PlotLines = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
-PlotLinesHovered = { W = 1.0, X = 1.0, Y = 0.0, Z = 0.0 }
-PopupBg = { W = 0.9200000166893005, X = 0.1899999976158142, Y = 0.1899999976158142, Z = 0.1899999976158142 }
+MenuBarBg = { A = 1.0, B = 0.14000000059604645, G = 0.14000000059604645, R = 0.14000000059604645 }
+ModalWindowDimBg = { A = 0.3499999940395355, B = 0.0, G = 0.0, R = 1.0 }
+NavHighlight = { A = 1.0, B = 0.0, G = 0.0, R = 1.0 }
+NavWindowingDimBg = { A = 0.20000000298023224, B = 0.0, G = 0.0, R = 1.0 }
+NavWindowingHighlight = { A = 0.699999988079071, B = 0.0, G = 0.0, R = 1.0 }
+PlotHistogram = { A = 1.0, B = 0.0, G = 0.0, R = 1.0 }
+PlotHistogramHovered = { A = 1.0, B = 0.0, G = 0.0, R = 1.0 }
+PlotLines = { A = 1.0, B = 0.0, G = 0.0, R = 1.0 }
+PlotLinesHovered = { A = 1.0, B = 0.0, G = 0.0, R = 1.0 }
+PopupBg = { A = 0.9200000166893005, B = 0.1899999976158142, G = 0.1899999976158142, R = 0.1899999976158142 }
 PopupBorderSize = 1.0
 PopupRounding = 4.0
-ResizeGrip = { W = 0.28999999165534973, X = 0.2800000011920929, Y = 0.2800000011920929, Z = 0.2800000011920929 }
-ResizeGripActive = { W = 1.0, X = 0.4000000059604645, Y = 0.4399999976158142, Z = 0.4699999988079071 }
-ResizeGripHovered = { W = 0.28999999165534973, X = 0.4399999976158142, Y = 0.4399999976158142, Z = 0.4399999976158142 }
-ScrollbarBg = { W = 0.5400000214576721, X = 0.05000000074505806, Y = 0.05000000074505806, Z = 0.05000000074505806 }
-ScrollbarGrab = { W = 0.5400000214576721, X = 0.3400000035762787, Y = 0.3400000035762787, Z = 0.3400000035762787 }
-ScrollbarGrabActive = { W = 0.5400000214576721, X = 0.5600000023841858, Y = 0.5600000023841858, Z = 0.5600000023841858 }
-ScrollbarGrabHovered = { W = 0.5400000214576721, X = 0.4000000059604645, Y = 0.4000000059604645, Z = 0.4000000059604645 }
+ResizeGrip = { A = 0.28999999165534973, B = 0.2800000011920929, G = 0.2800000011920929, R = 0.2800000011920929 }
+ResizeGripActive = { A = 1.0, B = 0.4699999988079071, G = 0.4399999976158142, R = 0.4000000059604645 }
+ResizeGripHovered = { A = 0.28999999165534973, B = 0.4399999976158142, G = 0.4399999976158142, R = 0.4399999976158142 }
+ScrollbarBg = { A = 0.5400000214576721, B = 0.05000000074505806, G = 0.05000000074505806, R = 0.05000000074505806 }
+ScrollbarGrab = { A = 0.5400000214576721, B = 0.3400000035762787, G = 0.3400000035762787, R = 0.3400000035762787 }
+ScrollbarGrabActive = { A = 0.5400000214576721, B = 0.5600000023841858, G = 0.5600000023841858, R = 0.5600000023841858 }
+ScrollbarGrabHovered = { A = 0.5400000214576721, B = 0.4000000059604645, G = 0.4000000059604645, R = 0.4000000059604645 }
 ScrollbarRounding = 9.0
 ScrollbarSize = 15.0
-Separator = { W = 1.0, X = 1.0, Y = 0.2800000011920929, Z = 0.2800000011920929 }
-SeparatorActive = { W = 1.0, X = 0.4000000059604645, Y = 0.4399999976158142, Z = 0.4699999988079071 }
-SeparatorHovered = { W = 0.28999999165534973, X = 0.4399999976158142, Y = 0.4399999976158142, Z = 0.4399999976158142 }
-SliderGrab = { W = 0.5400000214576721, X = 0.3400000035762787, Y = 0.3400000035762787, Z = 0.3400000035762787 }
-SliderGrabActive = { W = 0.5400000214576721, X = 0.5600000023841858, Y = 0.5600000023841858, Z = 0.5600000023841858 }
-Tab = { W = 0.5199999809265137, X = 0.0, Y = 0.0, Z = 0.0 }
-TabActive = { W = 0.36000001430511475, X = 0.20000000298023224, Y = 0.20000000298023224, Z = 0.20000000298023224 }
+Separator = { A = 0.5, B = 1.0, G = 0.699999988079071, R = 0.30000001192092896 }
+SeparatorActive = { A = 0.6499999761581421, B = 1.0, G = 0.800000011920929, R = 0.4000000059604645 }
+SeparatorHovered = { A = 0.8500000238418579, B = 1.0, G = 0.6000000238418579, R = 0.20000000298023224 }
+SliderGrab = { A = 0.5400000214576721, B = 0.3400000035762787, G = 0.3400000035762787, R = 0.3400000035762787 }
+SliderGrabActive = { A = 0.5400000214576721, B = 0.5600000023841858, G = 0.5600000023841858, R = 0.5600000023841858 }
+Tab = { A = 0.5199999809265137, B = 0.0, G = 0.0, R = 0.0 }
+TabActive = { A = 0.36000001430511475, B = 0.20000000298023224, G = 0.20000000298023224, R = 0.20000000298023224 }
 TabBorderSize = 1.0
-TabHovered = { W = 1.0, X = 0.14000000059604645, Y = 0.14000000059604645, Z = 0.14000000059604645 }
+TabHovered = { A = 1.0, B = 0.14000000059604645, G = 0.14000000059604645, R = 0.14000000059604645 }
 TabRounding = 4.0
-TabUnfocused = { W = 0.5199999809265137, X = 0.0, Y = 0.0, Z = 0.0 }
-TabUnfocusedActive = { W = 1.0, X = 0.14000000059604645, Y = 0.14000000059604645, Z = 0.14000000059604645 }
-TableBorderLight = { W = 0.28999999165534973, X = 0.2800000011920929, Y = 0.2800000011920929, Z = 0.2800000011920929 }
-TableBorderStrong = { W = 0.5199999809265137, X = 0.0, Y = 0.0, Z = 0.0 }
-TableHeaderBg = { W = 0.5199999809265137, X = 0.0, Y = 0.0, Z = 0.0 }
-TableRowBg = { W = 0.0, X = 0.0, Y = 0.0, Z = 0.0 }
-TableRowBgAlt = { W = 0.05999999865889549, X = 1.0, Y = 1.0, Z = 1.0 }
-Text = { W = 1.0, X = 1.0, Y = 1.0, Z = 1.0 }
-TextDisabled = { W = 1.0, X = 0.5, Y = 0.5, Z = 0.5 }
-TextSelectedBg = { W = 1.0, X = 0.20000000298023224, Y = 0.2199999988079071, Z = 0.23000000417232513 }
-TitleBg = { W = 1.0, X = 0.0, Y = 0.0, Z = 0.0 }
-TitleBgActive = { W = 1.0, X = 0.05999999865889549, Y = 0.05999999865889549, Z = 0.05999999865889549 }
-TitleBgCollapsed = { W = 1.0, X = 0.0, Y = 0.0, Z = 0.0 }
+TabUnfocused = { A = 0.5199999809265137, B = 0.0, G = 0.0, R = 0.0 }
+TabUnfocusedActive = { A = 1.0, B = 0.14000000059604645, G = 0.14000000059604645, R = 0.14000000059604645 }
+TableBorderLight = { A = 0.28999999165534973, B = 0.2800000011920929, G = 0.2800000011920929, R = 0.2800000011920929 }
+TableBorderStrong = { A = 0.5199999809265137, B = 0.0, G = 0.0, R = 0.0 }
+TableHeaderBg = { A = 0.5199999809265137, B = 0.0, G = 0.0, R = 0.0 }
+TableRowBg = { A = 0.0, B = 0.0, G = 0.0, R = 0.0 }
+TableRowBgAlt = { A = 0.05999999865889549, B = 1.0, G = 1.0, R = 1.0 }
+Text = { A = 1.0, B = 1.0, G = 1.0, R = 1.0 }
+TextDisabled = { A = 1.0, B = 0.5, G = 0.5, R = 0.5 }
+TextSelectedBg = { A = 1.0, B = 0.23000000417232513, G = 0.2199999988079071, R = 0.20000000298023224 }
+TitleBg = { A = 1.0, B = 0.0, G = 0.0, R = 0.0 }
+TitleBgActive = { A = 1.0, B = 0.05999999865889549, G = 0.05999999865889549, R = 0.05999999865889549 }
+TitleBgCollapsed = { A = 1.0, B = 0.0, G = 0.0, R = 0.0 }
 TouchExtraPadding = { X = 0.0, Y = 0.0 }
-WindowBg = { W = 1.0, X = 0.10000000149011612, Y = 0.10000000149011612, Z = 0.10000000149011612 }
+WindowBg = { A = 1.0, B = 0.10000000149011612, G = 0.10000000149011612, R = 0.10000000149011612 }
 WindowBorderSize = 1.0
 WindowPadding = { X = 8.0, Y = 8.0 }
 WindowRounding = 7.0
