--- a/Content/imgui.ini
+++ b/Content/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=3840,2054
 Collapsed=0
 
 [Window][Debug##Default]
@@ -16,15 +16,14 @@ DockId=0x00000002,0
 
 [Window][日志]
 Pos=8,44
-Size=1565,1028
+Size=1013,1002
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-Pos=8,44
-Size=3824,2002
+Pos=494,514
+Size=1728,972
 Collapsed=0
-DockId=0x00000001,2
 
 [Window][Example: Assets Browser]
 Pos=627,666
@@ -36,10 +35,10 @@ IsChild=1
 Size=830,600
 
 [Window][内容浏览器]
-Pos=8,44
-Size=1565,1028
+Pos=8,1048
+Size=3824,998
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x0000000A,0
 
 [Window][Example: Documents]
 Pos=1024,423
@@ -97,10 +96,29 @@ IsChild=1
 Size=416,976
 
 [Window][细节]
-Pos=1575,44
-Size=337,1028
+Pos=1023,44
+Size=2809,1002
 Collapsed=0
 DockId=0x00000006,0
+
+[Window][内容浏览器/LeftFolder_284DBED9]
+IsChild=1
+Size=915,976
+
+[Window][FolderTree]
+Pos=1188,632
+Size=689,609
+Collapsed=0
+
+[Window][FileList]
+Pos=592,357
+Size=404,609
+Collapsed=0
+
+[Window][ContentBrowser]
+Pos=1096,431
+Size=1024,661
+Collapsed=0
 
 [Table][0x4D95F9BC,3]
 Column 0  Weight=0.2614
@@ -160,11 +178,13 @@ Column 2  Width=88
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0xC0DFADC4 Window=0xD0388BC8 Pos=8,44 Size=1904,1028 Split=X Selected=0x16870F44
-  DockNode      ID=0x00000005 Parent=0xC0DFADC4 SizeRef=1565,1028 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=2248,1028 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=996,1028 CentralNode=1 Selected=0x5A3EEF93
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=906,1028 Selected=0xFA76FC88
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1574,1028 Selected=0x3EEA4247
-  DockNode      ID=0x00000006 Parent=0xC0DFADC4 SizeRef=337,1028 Selected=0x4BBB5F53
+DockSpace         ID=0xC0DFADC4 Window=0xD0388BC8 Pos=8,44 Size=3824,2002 Split=Y Selected=0x16870F44
+  DockNode        ID=0x00000009 Parent=0xC0DFADC4 SizeRef=3824,1002 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000009 SizeRef=1013,2002 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=2248,1028 Split=X
+        DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=996,1028 CentralNode=1 Selected=0x16870F44
+        DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=906,1028 Selected=0xFA76FC88
+      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1574,1028 Selected=0x3EEA4247
+    DockNode      ID=0x00000006 Parent=0x00000009 SizeRef=2809,2002 Selected=0x4BBB5F53
+  DockNode        ID=0x0000000A Parent=0xC0DFADC4 SizeRef=3824,998 Selected=0x5A3EEF93
 
