feat(assets): 添加纹理处理功能并更新编辑器图标纹理坐标- 在 Assets 目录下新增 Texture.cpp 和 Texture.h 文件，实现纹理处理功能 - 更新 EditorIconAtlas_UV.json，添加新的编辑器图标纹理坐标 - 修改 CMakeLists.txt，添加 Texture.cpp 和 Texture.h 到 KitaAssets目标

--- a/Engine/Assets/CMakeLists.txt
+++ b/Engine/Assets/CMakeLists.txt
@@ -13,6 +13,8 @@ add_library(KitaAssets
         Shader.h
         AssetsConfig.cpp
         AssetsConfig.h
+        Texture.cpp
+        Texture.h
 )
 
 target_link_libraries(KitaAssets PRIVATE KitaCore KitaObject KitaRHI KitaProject)
