feat(editor): 实现Inspector系统并支持Mesh和Texture资源的属性查看
- 添加MeshInspector和TextureInspector类，用于在编辑器中展示Mesh和Texture资源的详细信息
- 新增Selection系统，用于管理编辑器中的对象选中状态- 扩展EditorUI功能，增加图像显示、颜色边框、组布局等ImGui封装接口
- 改进Color结构体，增加constexpr支持及ABGR颜色通道顺序选项
-为RHI Vulkan后端添加DestroyImGuiTexture接口以正确释放ImGui纹理资源
- 调整内容浏览器窗口逻辑，将文件夹显示从Text改为Button，并实现点击选中功能
- 更新imgui.ini配置，调整窗口布局与尺寸
-优化InspectorWindow逻辑，自动收集并创建对应类型的Inspector实例
- 修改Charset.txt字体字符集内容

--- a/Engine/Editor/CMakeLists.txt
+++ b/Engine/Editor/CMakeLists.txt
@@ -28,6 +28,10 @@ add_library(KitaEditor
         Windows/ContentBrowserWindow.h
         Selection.cpp
         Selection.h
+        Inspector/MeshInspector.cpp
+        Inspector/MeshInspector.h
+        Inspector/TextureInspector.cpp
+        Inspector/TextureInspector.h
 )
 
 target_link_libraries(KitaEditor PRIVATE KitaCore KitaObject KitaRender KitaAssets KitaRHI)
