--- a/Content/imgui.ini
+++ b/Content/imgui.ini
@@ -15,10 +15,10 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][日志]
-Pos=8,44
-Size=1067,411
+Pos=1060,660
+Size=852,412
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000008,0
 
 [Window][Dear ImGui Demo]
 Pos=399,317
@@ -35,10 +35,10 @@ IsChild=1
 Size=830,600
 
 [Window][内容浏览器]
-Pos=8,457
-Size=1904,615
+Pos=8,660
+Size=1050,412
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000007,0
 
 [Window][Example: Documents]
 Pos=1024,423
@@ -96,8 +96,8 @@ IsChild=1
 Size=416,976
 
 [Window][细节]
-Pos=1077,44
-Size=835,411
+Pos=1382,44
+Size=530,614
 Collapsed=0
 DockId=0x00000006,0
 
@@ -120,10 +120,18 @@ Pos=1096,431
 Size=1024,661
 Collapsed=0
 
+[Window][内容浏览器/A_258BB3E1]
+IsChild=1
+Size=364,360
+
+[Window][内容浏览器/B_36DB4015]
+IsChild=1
+Size=833,254
+
 [Table][0x4D95F9BC,3]
-Column 0  Weight=0.4088
-Column 1  Weight=0.2956
-Column 2  Weight=2.2957
+Column 0  Weight=0.4001
+Column 1  Weight=0.1483
+Column 2  Weight=2.4516
 
 [Table][0xB6880529,2]
 RefScale=32
@@ -179,12 +187,14 @@ Column 3  Weight=1.0000
 
 [Docking][Data]
 DockSpace         ID=0xC0DFADC4 Window=0xD0388BC8 Pos=8,44 Size=1904,1028 Split=Y Selected=0x16870F44
-  DockNode        ID=0x00000009 Parent=0xC0DFADC4 SizeRef=3824,1385 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000009 SizeRef=1067,2002 Split=X
+  DockNode        ID=0x00000009 Parent=0xC0DFADC4 SizeRef=3824,614 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000009 SizeRef=1372,2002 Split=X
       DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=2248,1028 Split=X
         DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=996,1028 CentralNode=1 Selected=0x16870F44
         DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=906,1028 Selected=0xFA76FC88
       DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1574,1028 Selected=0x3EEA4247
-    DockNode      ID=0x00000006 Parent=0x00000009 SizeRef=835,2002 Selected=0x4BBB5F53
-  DockNode        ID=0x0000000A Parent=0xC0DFADC4 SizeRef=3824,615 Selected=0x5A3EEF93
+    DockNode      ID=0x00000006 Parent=0x00000009 SizeRef=530,2002 Selected=0x4BBB5F53
+  DockNode        ID=0x0000000A Parent=0xC0DFADC4 SizeRef=3824,412 Split=X Selected=0x5A3EEF93
+    DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1050,412 Selected=0x5A3EEF93
+    DockNode      ID=0x00000008 Parent=0x0000000A SizeRef=852,412 Selected=0x16870F44
 
