--- a/Content/imgui.ini
+++ b/Content/imgui.ini
@@ -9,10 +9,10 @@ Size=400,400
 Collapsed=0
 
 [Window][窗口]
-Pos=1006,44
-Size=906,1028
+Pos=8,44
+Size=1372,614
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][日志]
 Pos=1060,660
@@ -186,15 +186,13 @@ Column 2  Width=88
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0xC0DFADC4 Window=0xD0388BC8 Pos=8,44 Size=1904,1028 Split=Y Selected=0x16870F44
-  DockNode        ID=0x00000009 Parent=0xC0DFADC4 SizeRef=3824,614 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000009 SizeRef=1372,2002 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=2248,1028 Split=X
-        DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=996,1028 CentralNode=1 Selected=0x16870F44
-        DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=906,1028 Selected=0xFA76FC88
-      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1574,1028 Selected=0x3EEA4247
-    DockNode      ID=0x00000006 Parent=0x00000009 SizeRef=530,2002 Selected=0x4BBB5F53
-  DockNode        ID=0x0000000A Parent=0xC0DFADC4 SizeRef=3824,412 Split=X Selected=0x5A3EEF93
-    DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1050,412 Selected=0x5A3EEF93
-    DockNode      ID=0x00000008 Parent=0x0000000A SizeRef=852,412 Selected=0x16870F44
+DockSpace       ID=0xC0DFADC4 Window=0xD0388BC8 Pos=8,44 Size=1904,1028 Split=Y Selected=0x16870F44
+  DockNode      ID=0x00000009 Parent=0xC0DFADC4 SizeRef=3824,614 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000009 SizeRef=1372,2002 Split=X
+      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=2248,1028 CentralNode=1 Selected=0xFA76FC88
+      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1574,1028 Selected=0x3EEA4247
+    DockNode    ID=0x00000006 Parent=0x00000009 SizeRef=530,2002 Selected=0x4BBB5F53
+  DockNode      ID=0x0000000A Parent=0xC0DFADC4 SizeRef=3824,412 Split=X Selected=0x5A3EEF93
+    DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1050,412 Selected=0x5A3EEF93
+    DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=852,412 Selected=0x16870F44
 
