feat(render): 实现默认渲染管线并优化渲染上下文- 添加 DefaultRenderPipeline 类，支持深度目标和尺寸调整- 在 RenderContext 中移除默认 RenderPipeline，改为事件驱动渲染-为 RenderPipeline 添加抽象基类标记和 Resize 接口 - 增强 RenderTarget 支持动态调整尺寸和绑定 RenderPass -为 RHIImageDesc 添加相等运算符，便于比较图像描述 - 在 FrameBuffer 中添加获取绑定 RenderPass 的接口 -为 ViewportWindow 添加自定义 RenderPipeline 支持- 添加 GfxContext 引用的便捷获取函数- 更新 CMakeLists以包含新添加的渲染管线源文件

--- a/Engine/Render/CMakeLists.txt
+++ b/Engine/Render/CMakeLists.txt
@@ -12,6 +12,8 @@ add_library(KitaRender
         RenderPipeline.h
         RenderTarget.cpp
         RenderTarget.h
+        Pipeline/DefaultRenderPipeline.cpp
+        Pipeline/DefaultRenderPipeline.h
 )
 
 target_link_libraries(KitaRender PRIVATE KitaCore KitaMath KitaRHI KitaWorld KitaEditor KitaObject)
