feat(render): 实现默认渲染管线与视口窗口功能
- 添加默认渲染管线的绘制接口实现- 完善深度目标创建逻辑并指定初始布局
-优化命令缓冲区资源屏障处理流程- 新增ImageView相关类及子资源范围获取函数
- 引入任务图Dump调试接口用于状态查看
- 实现视口窗口的后缓冲区管理与ImGui集成- 重构回调系统模板参数以提升类型安全
- 更新RHI枚举定义使用强类型枚举值
- 增加并发集合遍历方法支持函数式操作
- 调整CMake链接依赖以包含新模块支持

--- a/Engine/RHI/CMakeLists.txt
+++ b/Engine/RHI/CMakeLists.txt
@@ -54,6 +54,7 @@ add_library(KitaRHI
         Vulkan/Buffer_Vulkan.h
         GfxCommandHelper.cpp
         GfxCommandHelper.h
+        ImageView.cpp
 )
 
 target_link_libraries(KitaRHI PRIVATE KitaCore KitaMath)
