--- a/Content/imgui.ini
+++ b/Content/imgui.ini
@@ -128,10 +128,15 @@ Size=364,360
 IsChild=1
 Size=833,254
 
+[Window][视口]
+Pos=170,131
+Size=836,447
+Collapsed=0
+
 [Table][0x4D95F9BC,3]
-Column 0  Weight=0.4001
-Column 1  Weight=0.1483
-Column 2  Weight=2.4516
+Column 0  Weight=0.3995
+Column 1  Weight=0.3392
+Column 2  Weight=2.2613
 
 [Table][0xB6880529,2]
 RefScale=32
