feat(assets): 添加Material资产支持
- 新增Material类及其元数据结构MaterialMeta
- 在AssetsManager中注册MaterialMeta表-为Material类生成反射和序列化代码
- 添加Material.cpp实现基础方法
- 更新CMakeLists.txt包含Material相关文件- 修复ArrayProxy中元素引用问题
- 增强MapProxy支持任意键值类型
- 完善序列化系统对Map类型的支持- 添加SerializationError.cpp实现文件-优化ObjectPtr.h支持Map类型对象引用提取

--- a/Engine/Assets/CMakeLists.txt
+++ b/Engine/Assets/CMakeLists.txt
@@ -15,6 +15,8 @@ add_library(KitaAssets
         AssetsConfig.h
         Texture.cpp
         Texture.h
+        Material.cpp
+        Material.h
 )
 
 target_link_libraries(KitaAssets PRIVATE KitaCore KitaObject KitaRHI KitaProject)
