feat(core): 添加哈希工具类和容器哈希支持
- 新增 HashUtils 类，提供 FNV 哈希算法实现
-为 Array 和 Optional 容器添加 GetHashCode 方法
- 为 RHI 渲染相关的结构体添加哈希值计算功能
- 在 Shader 参数解析中增加 JSON 数据处理- 完善 Material 资源构造和有效性检查逻辑
- 调整 EditorUI 和 EngineLoop 中系统初始化顺序
- 创建 RenderPassManager用于管理渲染通道资源
-修复 Shader 编译缓存相关函数的常量性问题
- 更新 CMakeLists.txt 添加新源文件和日志标签

--- a/Engine/Core/CMakeLists.txt
+++ b/Engine/Core/CMakeLists.txt
@@ -92,6 +92,8 @@ add_library(KitaCore
         FileSystem/InputFileStream.cpp
         FileSystem/InputFileStream.h
         Serialization/SerializationError.cpp
+        HashUtils.cpp
+        HashUtils.h
 )
 
 find_package(spdlog CONFIG REQUIRED)
