--- a/Engine/Render/CMakeLists.txt
+++ b/Engine/Render/CMakeLists.txt
@@ -14,6 +14,8 @@ add_library(KitaRender
         RenderTarget.h
         Pipeline/DefaultRenderPipeline.cpp
         Pipeline/DefaultRenderPipeline.h
+        RenderPassManager.cpp
+        RenderPassManager.h
 )
 
 target_link_libraries(KitaRender PRIVATE KitaCore KitaMath KitaRHI KitaWorld KitaEditor KitaObject)
