refactor(rhi): 重构RHI资源管理与着色器管线配置
- 移除RenderPassManager，引入RHIResourceRegistry统一管理RHI资源
- 重构ERHIShaderStage枚举为enum class并支持位运算
- 在Shader二进制数据中添加深度测试开关配置- 添加DisableDepthTest属性用于着色器函数标记
- 完善材质加载时的着色器有效性检查
-优化描述符集布局的创建与管理逻辑
- 修复Shader参数信息获取相关的空指针检查问题

--- a/Engine/Render/CMakeLists.txt
+++ b/Engine/Render/CMakeLists.txt
@@ -14,8 +14,8 @@ add_library(KitaRender
         RenderTarget.h
         Pipeline/DefaultRenderPipeline.cpp
         Pipeline/DefaultRenderPipeline.h
-        RenderPassManager.cpp
-        RenderPassManager.h
+        RHIResourceRegistry.cpp
+        RHIResourceRegistry.h
 )
 
 target_link_libraries(KitaRender PRIVATE KitaCore KitaMath KitaRHI KitaWorld KitaEditor KitaObject)
